# IoT_monitor

./: .dockerignore  .env  .gitignore  CMakeLists.txt  LICENSE  README.md  board.txt  conanfile.txt  data_low_time.json  docker-compose.yml  ghz-tests-analytics.txt  ghz-tests.txt  ghz-tests_v2.txt  ghz-tests_v4.txt  install.txt  proj_info.txt  tree.txt
analytics_service/: CMakeLists.txt  Dockerfile  analytics_server.cpp  analytics_server.h  analytics_service.cpp
config/: config.h
edge_service/: CMakeLists.txt  Dockerfile  edge_server.cpp  edge_server.h  edge_service.cpp
logger_factory/: CMakeLists.txt  logger_factory.h
monitoring/grafana/dashboards/: default.json  iot-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yaml
monitoring/loki/: loki-config.yaml
monitoring/loki/data/boltdb-shipper-active/uploader/: name
monitoring/loki/data/chunks/: loki_cluster_seed.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yaml
parse/: .CMakeLists.txt.kate-swp  CMakeLists.txt  prometheus_metrics.h  redis_stream_parser.h
perf_test_data/: data.json  ghz-tests_v2.txt  ghz-tests_v4.txt
prometheus_metrics/: CMakeLists.txt  prometheus_metrics.h  prometheus_metrics_publisher.cpp  prometheus_metrics_publisher.h
proto/: CMakeLists.txt  analytics_service.proto  common.proto  edge_service.proto
